--- a/css/styles.css
+++ b/css/styles.css
@@ -20,29 +20,45 @@ body {
   box-sizing: inherit;
 }
 
-/*End Basic Styles*/
-
 img {
   width: 100%;
   height: auto;
   display: block;
 }
+/*End Basic Styles*/
 
-p {
-  color: lightseagreen;
+/* Begin Hero Styles*/
+.hero-box {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 0px;
+  align-content: center;
+  justify-content: center;
+  align-items: start;
+  hight: 100%;
+  width: 100%;
 }
 
-.myColor {
-  color: lightskyblue;
-  font-size: 56px;
+.hero-image-box {
+  hieght: 100vh;
+  width: 100%;
+  display: grid;
+  grid-column: 1 /-1;
+  grid-row: 1 / -1;
 }
 
-.mycolortwo {
-  color: lightskyblue;
-  font-size: 87px;
-  font-weight: bold;
+.hero-image {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
 }
 
-h1 {
-  color: lightseagreen;
+.hero-text-box {
+  grid-row: 1/-1;
+  grid-column: 1/-1;
+  align-self: center;
+  padding: 1rem;
+  z-index: 10;
+  text-align: center;
 }
