--- a/css/styles.css
+++ b/css/styles.css
@@ -41,17 +41,27 @@ img {
 }
 
 .hero-image-box {
-  hieght: 100vh;
+  height: 100vh;
   width: 100%;
   display: grid;
   grid-column: 1 /-1;
   grid-row: 1 / -1;
 }
 
+.hero-image-box::after {
+  content: "";
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(0, 238, 255, 0.705);
+}
 .hero-image {
   width: 100%;
   height: 100%;
-  object-fit: fill;
+  object-fit: cover;
+  overflow: hidden;
 }
 
 .hero-text-box {
@@ -61,4 +71,43 @@ img {
   padding: 1rem;
   z-index: 10;
   text-align: center;
+}
+
+.hero-heading {
+  font-size: 2rem;
+  line-height: 3rem;
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.hero-text {
+  font-size: 2rem;
+  color: white;
+}
+
+/* Media Queries Below*/
+
+@media (min-width: 600px) {
+  .hero-heading {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+
+  .hero-text {
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media (min-width: 920px) {
+  .hero-heading {
+    font-size: 9rem;
+    line-height: 9rem;
+  }
+
+  .hero-text {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
 }
