--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body {
   padding: 0;
   min-height: 100%;
   max-width: 100%;
+  padding-bottom: 30rem;
 }
 
 *,
@@ -57,11 +58,20 @@ img {
   bottom: 0;
   background-color: rgba(0, 238, 255, 0.705);
 }
-.hero-image {
+.hero-image,
+.hero-video {
   width: 100%;
   height: 100%;
   object-fit: cover;
   overflow: hidden;
+}
+
+.hero-video {
+  background-color: black;
+  background-image: url("../image/My\ Wallpaper\ Gif\ 2\ new\ finished.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .hero-text-box {
@@ -116,6 +126,43 @@ img {
 .gallery-img:hover {
   transform: scale(1.5);
 }
+
+.about-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 1rem auto 0 auto;
+}
+
+.about text {
+  margin: 0 auto;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.about-text {
+  font-size: 2rem;
+  line-height: 2rem;
+}
+
+.about-social {
+  display: flex;
+  justify-content: start;
+}
+
+.about-social a {
+  color: black;
+  padding: 0 1rem 1 rem 1 rem;
+  font-size: 2rem;
+}
+
+.about-social a:hover {
+  color: cyan;
+}
+
+.about-image img {
+  height: 100%;
+  object-fit: cover;
+}
 /* Media Queries Below*/
 
 @media (min-width: 600px) {
@@ -132,6 +179,23 @@ img {
     font-size: 3rem;
     line-height: 3rem;
     padding-left: 1rem;
+  }
+  .about-container {
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+  }
+  .about-text h1 {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+
+  .about-text p {
+    font-size: 1.2 rem;
+    line-height: 1.6rem;
+  }
+
+  .about-social a {
+    font-size: 3rem;
   }
 }
 
@@ -151,5 +215,22 @@ img {
   .portfolio-container h1 {
     font-size: 6rem;
     line-height: 6rem;
+  }
+
+  .about-container {
+    max-width: 1400px;
+  }
+
+  .about-text h1 {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+
+  .about-text p {
+    font-size: 1.8rem;
+    line-height: 2.1rem;
+  }
+  .about-social a {
+    font-size: 4rem;
   }
 }
